@@ -140,6 +140,10 @@ module ActiveRecord
         true
       end
 
+      def supports_bulk_alter? #:nodoc:
+        true
+      end
+
       def native_database_types
         NATIVE_DATABASE_TYPES
       end
@@ -401,6 +405,21 @@ module ActiveRecord
         super(table_name, options.reverse_merge(:options => "ENGINE=InnoDB"))
       end
 
+      def bulk_change_table(table_name, operations) #:nodoc:
+        sqls = operations.map do |command, args|
+          table, arguments = args.shift, args
+          method = :"#{command}_sql"
+
+          if respond_to?(method)
+            send(method, table, *arguments)
+          else
+            raise "Unknown method called : #{method}(#{arguments.inspect})"
+          end
+        end.flatten.join(", ")
+
+        execute("ALTER TABLE #{quote_table_name(table_name)} #{sqls}")
+      end
+
       # Renames a table.
       #
       # Example:
@@ -550,6 +569,29 @@ module ActiveRecord
         rename_column_sql = "CHANGE #{quote_column_name(column_name)} #{quote_column_name(new_column_name)} #{current_type}"
         add_column_options!(rename_column_sql, options)
         rename_column_sql
+      end
+
+      def remove_column_sql(table_name, *column_names)
+        columns_for_remove(table_name, *column_names).map {|column_name| "DROP #{column_name}" }
+      end
+      alias :remove_columns_sql :remove_column
+
+      def add_index_sql(table_name, column_name, options = {})
+        index_name, index_type, index_columns = add_index_options(table_name, column_name, options)
+        "ADD #{index_type} INDEX #{index_name} (#{index_columns})"
+      end
+
+      def remove_index_sql(table_name, options = {})
+        index_name = index_name_for_remove(table_name, options)
+        "DROP INDEX #{index_name}"
+      end
+
+      def add_timestamps_sql(table_name)
+        [add_column_sql(table_name, :created_at, :datetime), add_column_sql(table_name, :updated_at, :datetime)]
+      end
+
+      def remove_timestamps_sql(table_name)
+        [remove_column_sql(table_name, :updated_at), remove_column_sql(table_name, :created_at)]
       end
 
       private
